2009-07-06  Ulrich Drepper  <drepper@redhat.com>

	* elf/do-lookup.h (ALLOWED_STT): Optimize test for valid symbol types.

2009-07-03  Andreas Schwab  <aschwab@redhat.com>

	* sysdeps/powerpc/sysdep.h (PPC_FEATURE_ARCH_2_06): Fix value.
	(PPC_FEATURE_HAS_VSX): Likewise.

2009-07-03  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/x86_64/multiarch/strcspn-c.c: Minor cleanups.
	* sysdeps/x86_64/multiarch/strspn-c.c: Likewise.

	* sysdeps/x86_64/multiarch/strcmp.S: Make sure functions are all
	aligned to 16 byte boundaries.
	* sysdeps/x86_64/multiarch/strcpy.S: Likewise.
	* sysdeps/x86_64/multiarch/strlen.S: Likewise.
	* sysdeps/x86_64/multiarch/rawmemchr.S: Likewise.

2009-07-02  H.J. Lu  <hongjiu.lu@intel.com>

	* config.h.in (HAVE_SSE4_SUPPORT): New macro.
	* config.make.in (config-cflags-sse4): New variable.
	* configure.in: Substitute libc_cv_cc_sse4.
	* sysdeps/i386/configure.in: Set libc_cv_cc_sse4 and
	HAVE_SSE4_SUPPORT.
	* sysdeps/x86_64/multiarch/Makefile (sysdep_routines): Add
	strcspn-c, strpbrk-c, strspn-c for string if gcc supports SSE4.
	* sysdeps/x86_64/multiarch/strcspn-c.c: New file.
	* sysdeps/x86_64/multiarch/strcspn.S: New file.
	* sysdeps/x86_64/multiarch/strpbrk-c.c: New file.
	* sysdeps/x86_64/multiarch/strpbrk.S: New file.
	* sysdeps/x86_64/multiarch/strspn-c.c: New file.
	* sysdeps/x86_64/multiarch/strspn.S: New file.

2009-06-30  H.J. Lu  <hongjiu.lu@intel.com>

	* elf/Makefile (distribute): Remove tst-audit.sh.  Add
	tst-audit2.c, tst-audit3.c, tst-auditmod3a.c, tst-auditmod3b.c.
	(tests): Add tst-audit3 for x86_64.
	(modules-names): Add tst-auditmod3a, tst-auditmod3b.
	($(objpfx)tst-audit3): Define.
	($(objpfx)tst-audit3.out): Define.
	(tst-audit3-ENV): Define.
	* elf/tst-audit3.c: New file.
	* elf/tst-auditmod3a.c: New file.
	* elf/tst-auditmod3b.c: New file.
	* sysdeps/x86_64/dl-trampoline.S (_dl_runtime_profile): Save
	and restore xmm6.

	* string/stpncpy.c (STPNCPY): New.  Defined if not defined.
	(__stpncpy): Renamed to ...